[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sage-dengue-gnn-forecaster"
version = "0.1.0"
description = "Spatio-temporal graph neural network for dengue outbreak prediction using 5.7M case records, ERA5 cl"
authors = [{name = "Kaushik Sarkar", email = "dr.kaushiks@hotmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"
